--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -253,62 +253,10 @@
 	</div></div>
 
 
-
-<h2 id="h_6">References</h2>
-
-<h3 id="h_6_1">Supreme Court of Canada</h3>
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">29355</a>  </dt> <dd>Transport Nordt American Express Inc. v. New Solutions Financial Corp. [2004]</dd>
-</dl>
-</div>
-</div>
-
-<h3 id="h_6_2">Federal Court of Appeal</h3>
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-<dt><a href="https://reports.fja-cmf.gc.ca/fja-cmf/j/en/item/332348/index.do">A-881-96</a> </dt> 
-<dd>Still v. Canada (M.N.R.) [1998] </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34429/index.do?q=ozdemir">A-31-97</a>  </dt> 
-<dd>Canada (Attorney General) v. Polat [1997] </dd>
-</dl>
-</div>
-</div>
-
-<h3 id="h_6_3">Tax Court of Canada</h3>
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/28999/index.do?q=coicou">2008-462(EI)</a>  </dt> 
-<dd>Coicou v. Canada (M.N.R.) [2008]</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/26083/index.do?q=garland+3282">2004-3281(CPP)</a>  </dt> 
-<dd>Garland v. Canada (M.N.R.) [2005] </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24830/index.do?q=mia+1040">98-1040-UI</a>  </dt> 
-<dd>Mia v. Canada (M.N.R.) [2001]  </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23837/index.do?q=amer+1794">97-1794-UI</a>  </dt> 
-<dd>Amer v. Canada (M.N.R.) [1999] </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23458/index.do?q=luzolo">97-2000-UI</a>   </dt> 
-<dd>Luzolo v. Canada (M.N.R.) [1999] </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23034/index.do?q=haule">98-511-UI</a>  </dt> 
-<dd>Haule v. Canada (M.N.R.) [1998] </dd>
-<dt><a href="https://decision.tcc-cci.gc.ca/tcc-cci/decisions/en/item/22865/index.do">96-402-UI</a> </dt> 
-<dd>Polat v. M.N.R. [1998] </dd>
-</dl>
-</div>
-</div>
-
-<h3 id="h_6_4">British Columbia Court of Appeal</h3>
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-<dt><a href="https://www.canlii.org/en/bc/bcca/doc/1955/1955canlii308/1955canlii308.html?searchUrlHash=AAAAAQAPSGFyZG1hbiB2LiBGYWxrAAAAAAE&amp;resultIndex=1">DLR 129</a> </dt> 
-<dd>Hardman v. Falk [1955]</dd>
-</dl>
-</div>
-</div>
-
+ <h2 class="h3">Past court decisions</h2>
+	   <ul>
+	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
+	   </ul>
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
