--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -112,8 +112,8 @@
 
 
  <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
-    <h3 class="h4 mrgn-tp-0">This content does not replace the law</h3>
-    <p>This content does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
+  
+    <p>This information does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
 
 
