--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -133,14 +133,18 @@
 </li>
 </ul>
 
-<h2>Past rulings</h2>
-<p>Review past rulings on employment status: <a href="court-filter.html" >Court decisions on employment status</a></p>
+<h2>Past court cases</h2>
+<p>You can search for <a href="court-filter.html" >court decisions</a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
 	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#contract"></div>	
 	</div></section>
 
+<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+	</header>	<div class="modal-body">	
+	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
+	</div></section>
 	 
 
     <div id="def-preFooter"></div>
