--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -71,6 +71,7 @@
   <li><a href="factors.html">Determine if the worker is an employee or self-employed</a></li>
 </ul>
 <div class="clearfix"></div>
+<div id="court">
 <p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 			
              <section id="filteredEventsList" class="wb-tagfilter provisional">
@@ -332,7 +333,7 @@
                      </div>
                   </div>
                </div>
-            </section>
+            </section></div>
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
