--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -103,7 +103,7 @@
 <li><a href="#h_3">Determine if a contract is valid</a></li>
 <li><a href="#h_4">What if you made an error in the employment status</a></li>
 <li><a href="#h_5">What if you are not sure if the worker is an employee or self-employed </a></li>
-<li><a href="#h_6">References </a></li>
+<li><a href="#h_6">Past court decisions</a></li>
 </ul>
 
 <h2 id="h_2">Types of employment status for tax purposes</h2>
@@ -253,7 +253,7 @@
 	</div></div>
 
 
- <h2 class="h3">Past court decisions</h2>
+ <h2 id="h_6">Past court decisions</h2>
 	   <ul>
 	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
 	   </ul>
