--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -133,8 +133,8 @@
 </li>
 </ul>
 
-<h2>Past court cases</h2>
-<p>You can search for <a href="court-filter.html" >court decisions</a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+<h2>Past court decisions</h2>
+<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
