--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1918,7 +1918,7 @@
  
   <h2 id="h_3">References</h2>
 
-
+<div id="ajax-reference">
 <h3 id="h_6_4">Legislation</h3>
 <div class="row">
 <div class="col-xs-12">
@@ -1962,7 +1962,7 @@
 </dl>
 </div>
 </div>
-  
+   </div> 
   
   <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">
     <header class="modal-header">
