--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -98,15 +98,16 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in the province of Quebec</h1>
+<div class="alert alert-info">
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
+</div>
+
 <p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
 
 
 </ul>  
-<div class="alert alert-info">
-<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
-</div>
 
 <ul>
 <li><a href="#h_1">Steps</a>
@@ -1046,36 +1047,7 @@
   </div>
 <h2 id="h_3">References</h2>
 
-<h3 id="h_3_1">Legislation and Court cases</h3>
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt> <dd>Supreme Court - 671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt> <dd>Federal Court of Appeal - Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt> <dd>Federal Court of Appeal - Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-5/#wb-cont">CEA 2</a> </dt> <dd>Canada Evidence Act, R.S., 1985, c. C-5</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/l-2/#wb-cont">CLC 4</a> </dt> <dd>Canada Labour Code</dd>
-<dt><a href="https://www.legisquebec.gouv.qc.ca/en/document/cs/ccq-1991">CCQ 2085 and 2098</a> </dt> <dd>Civil Code of Quebec, S.Q. 1991, c. 64 </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA</a> </dt> <dd>Employment Insurance Act, S.C. 1996, c. 23 </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/f-7.5/index.html#wb-cont">Harmonization of laws</a> </dt> <dd>Federal Law — Civil Law Harmonization Act, No. 1, S.C. 2001, ch. 4</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-21/index.html#wb-cont">IA 8.1</a> </dt> <dd>Interpretation Act, R.S.C. (1985), ch. I-21 (enacted by S.C. 2001, ch. 4)</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/t-2/index.html#wb-cont">TCCA 12(1)</a> </dt> <dd>Tax Court of Canada Act, R.S., 1985, c.T-2</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-1.html#h-279779">ITA: 5(1)</a> </dt> <dd>Income from an office or employment </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-99.html#h-1386438">ITA: 125(7)</a> </dt> <dd>Definition of a personal services business </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-205.html#h-317484">ITA: 248(1)</a> </dt> <dd>Definition of a specified shareholder</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/index.html#wb-cont">CPP: 2(1)</a> </dt> <dd>Definition of employment </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt> <dd>Definition of employment</dd>
-<dt><a href="">CPPR: 8.1(1)</a> </dt> <dd>Add description </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt> <dd>Definition of employment</dd>
-<dt><a href="">IECPR: 1(2) and 10(1)</a> </dt> <dd>Add description</dd>
-<dt><a href="">IECPR: 5 and 6</a> </dt> <dd>Add description</dd>
-<dt><a href="">IECPR: 7</a> </dt> <dd>Placement or employment agencies</dd>
-<dt><a href="">IECPR: 8</a> </dt> <dd>Barbers and hairdressers</dd>
-<dt><a href="">IECPR: 9</a> </dt> <dd>Taxi drivers</dd>
-</dl>
-	
-</div>
-</div>
+<div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-reference"></div>
 
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
