--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -254,13 +254,18 @@
 
 
  <h2 id="h_6">Past court decisions</h2>
-	   <ul>
-	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
-	   </ul>
+	
+<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-psb"></div>
+	</div></section>
+
+<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+	</header>	<div class="modal-body">	
+	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
 	</div></section>
 
 
