--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -112,7 +112,8 @@
 </ul>
 </li>
 <li><a href="#h_2">If you are not sure if the worker is an employee or self-employed</a></li>
-<li><a href="#h_3">References</a></li>
+<li><a href="#h_3">Past court decisions</a></li>
+<li><a href="#h_4">References</a></li>
 </ul>
  <h2 id="h_1">Steps</h2>
  <ol class="lst-stps ld-zr">
@@ -1916,7 +1917,12 @@
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
  
-  <h2 id="h_3">References</h2>
+
+<h2 id="h_3>Past court decisions</h2>
+<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+
+
+  <h2 id="h_4">References</h2>
 
 <div id="ajax-reference">
 <h3 id="h_6_4">Legislation</h3>
@@ -1964,6 +1970,12 @@
 </div>
    </div> 
   
+<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+	</header>	<div class="modal-body">	
+	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
+	</div></section>
+	 
+
   <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">
     <header class="modal-header">
       <h2 class="modal-title">What is considered a personal services business (PSB)</h2>
