--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1918,7 +1918,7 @@
   </div>
  
 
-<h2 id="h_3>Past court decisions</h2>
+<h2 id="h_3">Past court decisions</h2>
 <p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 
