--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1924,7 +1924,7 @@
 
   <h2 id="h_4">References</h2>
 
-<div id="ajax-reference">
+<div id="ajax-leg-reference">
 <h3 id="h_6_4">Legislation</h3>
 <div class="row">
 <div class="col-xs-12">
