--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1888,7 +1888,7 @@
   </ul>
   </li>
    <li>
-  <h3 id="h_1_3">Do a final analysis based on all factors</h2>
+  <h3 id="h_1_3">Do a final analysis based on all factors</h3>
   <div id="ajax-facts">
     <h4 id="analyze">Analyze the facts</h4>
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
@@ -1911,6 +1911,8 @@
     <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
     <h4 id="case">Review each situation on a case-by-case basis</h4>
     <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
+</div>
+
  </li>
   </ol>
 <h2 id="h_3">Past court decisions</h2>
