--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -1038,7 +1038,7 @@
   </ul>
 </li>
 <li>
-<h2 id="h_1_3">Do a final analysis based on all factors</h2>
+<h3 id="h_1_3">Do a final analysis based on all factors</h3>
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-facts"></div>
  	 </li>
@@ -1053,7 +1053,7 @@
 
 <h2 id="h_4">References</h2>
 
-<div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-leg-reference"></div>
+<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/guidance/factors-federal.html#ajax-leg-reference"></div>
 
 <section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
