--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -276,7 +276,7 @@
                                  <li><strong>Industry:</strong> Accommodation and food services</li>
                               </ul>
                               <details>
-                                 <summary>Summary</summary>
+                                 <summary>Summary for each factors</summary>
                                  <ul>
                                     <li>Worker does not have the freedom to determine how work should be done</li>
                                     <li>Worker is monitored or supervised by the hirer</li>
@@ -306,7 +306,7 @@
                                  <li><strong>Industry:</strong> Accommodation and food services</li>
                               </ul>
                               <details>
-                                 <summary>Summary</summary>
+                                 <summary>Summary for each factors</summary>
                                  <ul>
                                     <li>Worker does not have the freedom to determine how work should be done</li>
                                     <li>Worker is monitored or supervised by the hirer</li>
