--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -268,7 +268,7 @@
                         <li data-wb-tags="result-1 industry-1" class="well brdr-rds-0">
                               <p class="h4 mrgn-tp-0">Title: <a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/489451/index.do">AE Hospitality Ltd. v. Canada (National Revenue) (Chefs - multiple)</a></p>
                               <ul class="list-unstyled mrgn-bttm-md">
-                                 <li><strong>Result:</strong> Employee</li>
+                                 <li class="bg-info"><strong>Result:</strong> Employee</li>
                                  <li><strong>Court decision:</strong> Federal Court of Appeal</li>
 				   <li><strong>Reference:</strong> 2020 FCA 207</li>     
 				    <li><strong>File numbers:</strong>  A-268-19, A-269-19</li>  
