--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -278,7 +278,7 @@
                               <details>
                                  <summary>Summary for each factors</summary>
                                  <ul>
-                                    <li>Worker does not have the freedom to determine how work should be done</li>
+                                    <li>Worker <strong>does not</strong> have the freedom to determine how work should be done</li>
                                     <li>Worker is monitored or supervised by the hirer</li>
                                     <li>Hirer sets the worker's hours and schedule</li>
                                     <li>The hirer owns the most important tools or equipment</li>
