--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -80,16 +80,16 @@
                      <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
-                           <label for="result">Result</label>
+                           <label for="result">Result of decision</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="result-1">
-                                 Employer and employee
+                                 Employer and employee relationship
                               </option>
                               <option value="result-2">Self-employed</option>
                               <option value="result-3">Not available</option>
                            </select>
-                           <label for="decision">Court decision</label>
+                           <label for="decision">Type of court</label>
                            <select id="decision" name="decision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="decision-1">Supreme Court of Canada</option>
@@ -97,7 +97,7 @@
                               <option value="decision-3">Tax Court of Canada</option>
                            </select>
 
-                           <label for="industry">Industry</label>
+                           <label for="industry">Type of industry</label>
                            <select id="industry" name="industry" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="industry-1">Accommodation and food services</option>
@@ -152,63 +152,57 @@
                                  Wholesale trade
                               </option>
                            </select>
-                           <label for="intent">Intent  of relationship at time of contracting
-                           </label>
+                           <label for="intent">Contract - Intent of relationship <small>(factor 1)</small></label>
                            <select id="intent" name="intent" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="intent-1">Employer and employee</option>
                               <option value="intent-2">Self-employed worker</option>
                            </select>
-                           <label for="">Supervision
-                           </label>
+                           <label for="supervision">Control - Supervision</label>
                            <select id="supervision" name="supervision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="supervision-1">Worker is monitored or supervised by the hirer</option>
                               <option value="supervision-2">Worker is not monitored or supervised by the hirer
                            </select>
-                           <label for="agenda">Agenda</label>
+                           <label for="agenda">Control - Agenda</label>
                            <select id="agenda" name="agenda" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="agenda-1">Worker determines what work is to be done</option>
                               <option value="agenda-2">Hirer determines what work is to be done</option>
                               <option value="agenda-3">Both worker and hirer determine what work is to be done</option>
                            </select>
-                           <label for="turndown">Freedom to turn down work</label>
+                           <label for="turndown">Control - To turn down work</label>
                            <select id="turndown" name="turndown" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="turndown-1">The worker has the freedom to turn down work from the hirer</option>
                               <option value="turndown-2">The worker does not have the freedom to turn down work from hirer</option>
                            </select>
-                           <label for="schedule">Who sets hours and schedule
+                           <label for="schedule">Control - Hours and schedule
                            </label>
                            <select id="schedule" name="schedule" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="schedule-1">Worker sets their own hours and schedule</option>
                               <option value="schedule-2">Hirer sets the worker's hours and schedule</option>
                            </select>
-                           <label for="workshould">Freedom to determine how work should be done
-                           </label>
+                           <label for="workshould">Control - How work should be done </label>
                            <select id="workshould" name="workshould" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="workshould-1">Worker has the freedom to determine how work should be done</option>
                               <option value="workshould-1">Worker does not have the freedom to determine how work should be done</option>
                            </select>
-                           <label for="delegate">Freedom to delegate
-                           </label>
+                           <label for="delegate">Control - Delegate </label>
                            <select id="delegate" name="delegate" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="delegate-1">Worker is free to delegate or subcontract work without notifying the hirer</option>
                               <option value="delegate-2">Worker is not free to delegate or subcontract work</option>
                            </select>
-                           <label for="uniform">Requirement to wear a uniform
-                           </label>
+                           <label for="uniform">Control - Wear a uniform  </label>
                            <select id="uniform" name="uniform" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="uniform-1">Hirer imposes a dress code or requires a uniform</option>
                               <option value="uniform-2">Hirer does not impose a dress code or require a uniform</option>
                            </select>
-                           <label for="ownership">Ownership of tools and equipment
-                           </label>
+                           <label for="ownership">Ownership</label>
                            <select id="ownership" name="ownership" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="ownership-1">The worker owns the most important tools or equipment</option>
@@ -217,15 +211,13 @@
                                  Both the worker and the hirer own important tools or equipment
                               </option>
                            </select>
-                           <label for="risk">Personal risk of loss
-                           </label>
+                           <label for="risk">Risk</label>
                            <select id="risk" name="risk" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="risk-1">Worker is personally at risk of loss</option>
                               <option value="risk-2">Worker is not personally at risk of loss</option>
                            </select>
-                           <label for="reimbursement">Reimbursement
-                           </label>
+                           <label for="reimbursement">Profit</label>
                            <select id="reimbursement" name="reimbursement" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="reimbursement-1">Worker is reimbursed for work-related travel expenses</option>
@@ -239,8 +231,7 @@
                               <option value="where-2">The worker works in mobile locations</option>
                               <option value="where-3">The worker works from home or their own office</option>
                            </select>
-                           <label for="training">Training
-                           </label>
+                           <label for="training">Training</label>
                            <select id="training" name="training" class="full-width form-control wb-tagfilter-ctrl">
                               <option value="">All</option>
                               <option value="training-1">Hirer provides the worker with training</option>
