--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -80,6 +80,7 @@
                      <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
+ 	 <h3>Court decisions</h3>
                            <label for="result">Result of decision</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
@@ -152,7 +153,8 @@
                                  Wholesale trade
                               </option>
                            </select>
-                           <label for="intent">Contract - Intent of relationship <small>(factor 1)</small></label>
+ <h3>Factors</h3>
+                           <label for="intent">Contract - Intent of relationship <x-small>(factor 1)</x-small></label>
                            <select id="intent" name="intent" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="intent-1">Employer and employee</option>
