--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -80,7 +80,7 @@
                      <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
- 	 <h3>Court decisions</h3>
+ 	 <h3 class="mrgn-tp-sm">Court decisions</h3>
                            <label for="result">Result of decision</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
@@ -264,8 +264,8 @@
                                  <li class="bg-info"><strong>Result:</strong> Employee</li>
                                  <li><strong>Court decision:</strong> Federal Court of Appeal</li>
 				   <li><strong>Reference:</strong> 2020 FCA 207</li>     
-				    <li><strong>File numbers:</strong>  A-268-19, A-269-19</li>  
-				     <li><strong>Acts:</strong> Canada Pension Plan, Employment Insurance Act</li>     
+				    <li><strong>File number(s):</strong>  A-268-19, A-269-19</li>  
+				     <li><strong>Act(s):</strong> Canada Pension Plan, Employment Insurance Act</li>     
                                  <li><strong>Industry:</strong> Accommodation and food services</li>
                               </ul>
                               <details>
@@ -289,14 +289,14 @@
                               </details>
                         </li>
 						<li data-wb-tags="result-1 industry-1" class="well brdr-rds-0">
-                              <p class="h4 mrgn-tp-0">Title: <a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/489451/index.do">AE Hospitality Ltd. v. Canada (National Revenue) (Chefs - multiple)</a></p>
+                              <p class="h4 mrgn-tp-0">Title: <a href="">Link</a></p>
                               <ul class="list-unstyled mrgn-bttm-md">
-                                 <li><strong>Result:</strong> Employee</li>
-                                 <li><strong>Court decision:</strong> Federal Court of Appeal</li>
-				   <li><strong>Reference:</strong> 2020 FCA 207</li>     
-				    <li><strong>File numbers:</strong>  A-268-19, A-269-19</li>  
-				     <li><strong>Acts:</strong> Canada Pension Plan, Employment Insurance Act</li>     
-                                 <li><strong>Industry:</strong> Accommodation and food services</li>
+                                 <li class="bg-primary"><strong>Result:</strong> Self-employed worker</li>
+                                 <li><strong>Court decision:</strong> Tax Court of Canada</li>
+				   <li><strong>Reference:</strong> Add</li>     
+				    <li><strong>File number(s):</strong>  Add</li>  
+				     <li><strong>Act(s):</strong> Add</li>     
+                                 <li><strong>Industry:</strong> Add</li>
                               </ul>
                               <details>
                                  <summary>Summary for each factors</summary>
