--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -547,8 +547,7 @@
 		 </li>
 
 <li class="code-num mrgn-lft-md"> <details><summary>Box 45 – Employer-offered dental benefits <span class="label label-warning">Slips filed for calendar year 2023 and after</span> </summary>
-<p id="bx_45">For T4 slips filed for calendar year 2023 and after, it is <strong>mandatory</strong> to enter the appropriate code using box 45 to indicate whether the employee or any of their family members were <strong>eligible on December 31 of that year to access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered.</p>
-
+<p id="bx_45">For T4 slips filed for calendar year 2023 and after, it is <strong>mandatory</strong> to indicate whether the employee or any of their family members were <strong>eligible or not</strong>, on December 31 of that year, to <strong>access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered. </p>
     
 <div class="table-responsive section">
         <table class="table small table-striped table-condensed">
