--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -386,7 +386,7 @@
 
 <li class="code-num">  	
  <details><summary>Box 015 – Payer-offered dental benefits <span class="label label-warning">Slips filed for calendar year 2023 and after</span> </summary>
-<p id="bx015">For T4A slips filed for calendar year 2023 and after, it is <strong> mandatory</strong> to enter the appropriate code using box 015 to indicate whether the recipient or any of their family members were <strong>eligible on December 31 of that year to access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered <strong>if</strong> you reported an amount for pension or superannuation using <a href="#bx016">box 016</a>.</p>
+<p id="bx015">For T4A slips filed for calendar year 2023 and after, <strong>if</strong> you reported an amount for pension or superannuation using <a href="#bx016">box 016</a>, it is <strong>mandatory</strong> to indicate whether the recipient or any of their family members were <strong>eligible or not</strong>, on December 31 of that year, to <strong>access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered.</p>
 <p>If you <strong> do not</strong> report an amount using box 016, the use of box 015 is optional. </p>
    
 <div class="table-responsive section">
