--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -101,9 +101,9 @@
 <ul>
 <li><a href="#h_2">Types of employment status for tax purposes</a></li>
 <li><a href="#h_3">Determine if a contract is valid</a></li>
-<li><a href="#h_4">What if you made an error in the employment status</a></li>
+<li><a href="#h_4">If you made an error in the employment status</a></li>
 <li><a href="#h_6">Past court decisions</a></li>
-<li><a href="#h_5">What if you are not sure if the worker is an employee or self-employed </a></li>
+<li><a href="#h_5">If you are not sure if the worker is an employee or self-employed </a></li>
 </ul>
 
 <h2 id="h_2">Types of employment status for tax purposes</h2>
@@ -234,14 +234,14 @@
 </details>
 </div>
 
-<h2 id="h_4">What if you made an error in the employment status</h2>
+<h2 id="h_4">If you made an error in the employment status</h2>
 <p>Individuals and employers may have to pay unpaid tax and penalties, or lose entitlement to benefits, if their employment status is wrong.</p>
 
  <h2 id="h_6">Past court decisions</h2>
 <p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 
-<h2 id="h_5">What if you are not sure if the worker is an employee or self-employed </h2>
+<h2 id="h_5">If you are not sure if the worker is an employee or self-employed </h2>
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed. You can use the CRA guidance to help you gather the facts based on your sitution. </p>
 
  <div class="row">
