--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -173,7 +173,7 @@
                               <option value="turndown-2">Worker does not have the right to refuse work from the payer</option>
                            </select>
 	
- 		      <label for="schedule">Control - Work schedule <small>(factor 2)</small></label>
+ 		      <label for="schedule">Control - Work hours and schedule <small>(factor 2)</small></label>
                            <select id="schedule" name="schedule" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="schedule-1">Worker sets their own hours and schedule</option>
@@ -196,7 +196,7 @@
                               <option value="where-3">Worker works from home or their own office</option>
                            </select>
 
-			<label for="agenda">Control - How work is done  <small>(factor 2)</small></label>
+			<label for="agenda">Control - Who determines work to be done  <small>(factor 2)</small></label>
                            <select id="agenda" name="agenda" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="agenda-1">Worker determines what work is to be done</option>
