--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
@@ -187,7 +187,7 @@
 <p><strong>Enter your tax year end to get your dates</strong></p>
 <form class="form-inline">
   <div class="form-group">
-    <!--label class="wb-inv" for="enddate2">Enter your tax year end to get your dates<span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span></label-->
+    <label class="wb-inv" for="enddate2">Enter your tax year end to get your dates<span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span></label>
   <input class="form-control" type="date" id="enddate2" name="enddate2" min="2021-12-01" max="2023-12-31" value="">
 </div>
       <button class="btn btn-primary btn-lg mrgn-lft-sm" type="button" id="calculate2" data-wb-doaction="[ 
