--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -173,12 +173,14 @@
     <div tabindex="0" id="corps1" class="alert alert-info provisional hidden mrgn-tp-lg mrgn-bttm-md">
       <p class="text-muted small mrgn-bttm-0">Based on your selection</p>
       <h4 class="mrgn-tp-0">Your dates are:</h4>    
+      <div>
       <ul class="fa-ul">
         <li><span class="far fa-calendar-alt fa-li text-muted"></span> Your tax filing due date is: <strong><span class="nowrap" data-json-replace="#[jsonsmall2]/date">Date not loaded yet</span></strong><br><span class="small">(6 months after your tax year end)</span></li>
         </ul>
       <ul class="fa-ul mrgn-bttm-md">
         <li><span class="far fa-calendar-alt fa-li text-muted"></span> Your SR&amp;ED reporting deadline is: <strong><span class="nowrap" data-json-replace="#[jsonsmall2]/date2">Date not loaded yet</span></strong><br><span class="small">(12 months after your tax filing due date)</span></li>
         </ul>    
+      </div>
       <p>However, we recommend your <a href="#deadline">submit your SR&amp;ED claim early</a>, when you file your income taxes.</p>
       </div>
   </dd> 
@@ -227,12 +229,14 @@
     <div tabindex="0" id="trusts1" class="alert alert-info provisional hidden mrgn-tp-lg mrgn-bttm-md">
       <p class="text-muted small">Based on your selection</p>
       <h4 class="mrgn-tp-0">Your dates are:</h4>     
+      <div>
       <ul class="fa-ul">
         <li><span class="far fa-calendar-alt fa-li text-muted"></span> Your tax filing due date is: <strong><span class="nowrap" data-json-replace="#[jsonsmall]/date">Date not loaded yet</span></strong><br><span class="small">(90 days after your tax year end)</span></li>
         </ul>
       <ul class="fa-ul mrgn-bttm-md">
         <li><span class="far fa-calendar-alt fa-li text-muted"></span> Your SR&amp;ED  reporting deadline is: <strong><span class="nowrap" data-json-replace="#[jsonsmall]/date2">Date not loaded yet</span></strong><br><span class="small">(12 months after your tax filing due date)</span></li>
-        </ul>    
+        </ul>   
+        </div> 
       <p>However, we recommend  your <a href="#deadline">submit your SR&amp;ED claim early</a>, when you file your income taxes.</p>
       </div>
     </dd>
